parallel - loss fix

--- a/review/Untitled.ipynb
+++ b/review/Untitled.ipynb
@@ -10,10 +10,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-08 18:01:26.247880: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2023-04-08 18:01:26.277554: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2023-04-09 17:21:40.353336: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2023-04-09 17:21:40.382689: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-04-08 18:01:26.709690: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2023-04-09 17:21:40.790960: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -168,7 +168,7 @@
     {
      "data": {
       "text/plain": [
-       "(662608, 31, 1)"
+       "(662608, 30, 1)"
       ]
      },
      "execution_count": 6,
@@ -210,7 +210,7 @@
     {
      "data": {
       "text/plain": [
-       "(165652, 31, 1)"
+       "(165652, 30, 1)"
       ]
      },
      "execution_count": 8,
@@ -245,194 +245,264 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "7f91ae64",
+   "execution_count": 35,
+   "id": "da8ed2a5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "def create_clients(X, y, nb_classes, sampling_technique, num_clients=10, initial='clients'):\n",
-    "    #create a list of client names\n",
-    "    client_names = ['{}_{}'.format(initial, i+1) for i in range(num_clients)]\n",
-    "    clients = {client_names[i] : [] for i in range(len(client_names))}\n",
-    "    return assign_data_to_clients(clients, X, y, nb_classes, sampling_technique, X, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "62a81735",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def assign_data_to_clients(clients: dict, X:np.ndarray, y:np.ndarray, nb_classes:int, sampling_technique: str, X_train:np.ndarray, y_train:np.ndarray):\n",
-    "    sampled_data_indices = sample(y, sampling_technique, len(clients.keys()))\n",
-    "    for client_name, data_indices in zip(clients.keys(), sampled_data_indices):\n",
-    "        X = X_train[data_indices]\n",
-    "        y = y_train[data_indices]\n",
-    "        y = convert_to_categorical(y, nb_classes)\n",
-    "        clients[client_name] = list(zip(X, y))\n",
-    "    return clients"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "cc6c5fa0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def sample(y:np.ndarray, sampling_technique: str, nb_clients: int):\n",
-    "\n",
-    "    if sampling_technique.lower() == \"iid\":\n",
-    "        sampler_fn = iid_data_indices\n",
-    "    else:\n",
-    "        sampler_fn = non_iid_data_indices\n",
-    "    client_data_indices = sampler_fn(y, nb_clients)\n",
-    "    return client_data_indices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "ba0e5f07",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_class_weights(y_train):\n",
-    "\n",
-    "    class_weights = class_weight.compute_class_weight('balanced',\n",
-    "                                                 classes=np.unique(y_train),\n",
-    "                                                 y=y_train)\n",
-    "\n",
-    "    class_weights = {k: v for k,v in enumerate(class_weights)}\n",
-    "\n",
-    "    return class_weights"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "cd38ccdd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def convert_to_categorical(y, nb_classes):\n",
-    "    return to_categorical(y, num_classes=nb_classes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "3a5dd5d4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_shape = X_train.shape[1:]\n",
-    "nb_classes = len(label_encoder.classes_)\n",
-    "class_weights = get_class_weights(y_train)\n",
-    "\n",
-    "y_test = convert_to_categorical(y_test, nb_classes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "11342599",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def iid_data_indices(labels: np.ndarray, nb_clients: int):\n",
-    "    data_len = len(labels)\n",
-    "    indices = np.arange(data_len)\n",
-    "    np.random.shuffle(indices)\n",
-    "    chunks = np.array_split(indices, nb_clients)\n",
-    "    return chunks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "f5278a5a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clients_batched_original = create_clients(X_train, y_train, nb_classes, \"iid\", num_clients=30, initial='client')\n",
-    "clients_batched_original_test = create_clients(X_test, y_test, nb_classes, \"iid\", num_clients=30, initial='client')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "0152d3eb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['client_1', 'client_2', 'client_3', 'client_4', 'client_5', 'client_6', 'client_7', 'client_8', 'client_9', 'client_10', 'client_11', 'client_12', 'client_13', 'client_14', 'client_15', 'client_16', 'client_17', 'client_18', 'client_19', 'client_20', 'client_21', 'client_22', 'client_23', 'client_24', 'client_25', 'client_26', 'client_27', 'client_28', 'client_29', 'client_30'])"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clients_batched_original.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "68fffc27",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "22087"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(clients_batched_original[\"client_1\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "00881c53",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0.], dtype=float32)"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clients_batched_original[\"client_1\"][0][1]"
+    "a = list(range(100))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "26309d7a",
+   "id": "6638081b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "b = [(clients_batched_original[\"client_1\"][a][0], clients_batched_original[\"client_1\"][a][1]) for a in range(len(clients_batched_original[\"client_1\"]))]"
+    "import random\n",
+    "def randomize_indexes(l, parts):\n",
+    "    list_len = len(l)\n",
+    "    list_indexes = list(range(list_len))\n",
+    "    random.shuffle(list_indexes)\n",
+    "    return list_indexes\n",
+    "\n",
+    "def chunkify_indexes(lst,n):\n",
+    "    return [lst[i::n] for i in range(n)]\n",
+    "\n",
+    "def split_x_y_into_chunks(x, y, n_chunks):\n",
+    "    if len(x) != len(y):\n",
+    "        return \"error\"\n",
+    "    indexes = randomize_indexes(x, 10)\n",
+    "    indexes_chunks = chunkify_indexes(indexes, n_chunks)\n",
+    "    my_structure = {}\n",
+    "    print(\"len(indexes_chunks)\", len(indexes_chunks))\n",
+    "    print(\"len(indexes_chunks)[0]\", len(indexes_chunks[0]))\n",
+    "    for index in range(len(indexes_chunks)):\n",
+    "        my_structure[index] = {}\n",
+    "        my_structure[index][\"x\"] = []\n",
+    "        my_structure[index][\"y\"] = []\n",
+    "        for el in indexes_chunks[index]:\n",
+    "            my_structure[index][\"x\"].append(x[el])\n",
+    "            my_structure[index][\"y\"].append(y[el])\n",
+    "    return my_structure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "bf97c9cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "len(indexes_chunks) 10\n",
+      "len(indexes_chunks)[0] 16566\n",
+      "165652\n",
+      "165652\n",
+      "0\n",
+      "lenx 16566\n",
+      "leny 16566\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-09 18:53:57.449424: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_1' with dtype int32 and shape [16566]\n",
+      "\t [[{{node Placeholder/_1}}]]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16566\n",
+      "\n",
+      "1\n",
+      "lenx 16566\n",
+      "leny 16566\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-09 18:53:57.880025: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_1' with dtype int32 and shape [16566]\n",
+      "\t [[{{node Placeholder/_1}}]]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16566\n",
+      "\n",
+      "2\n",
+      "lenx 16565\n",
+      "leny 16565\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-09 18:53:58.384591: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_1' with dtype int32 and shape [16565]\n",
+      "\t [[{{node Placeholder/_1}}]]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16565\n",
+      "\n",
+      "3\n",
+      "lenx 16565\n",
+      "leny 16565\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-09 18:53:58.902535: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_1' with dtype int32 and shape [16565]\n",
+      "\t [[{{node Placeholder/_1}}]]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16565\n",
+      "\n",
+      "4\n",
+      "lenx 16565\n",
+      "leny 16565\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-09 18:53:59.331663: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_1' with dtype int32 and shape [16565]\n",
+      "\t [[{{node Placeholder/_1}}]]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16565\n",
+      "\n",
+      "5\n",
+      "lenx 16565\n",
+      "leny 16565\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-09 18:53:59.859048: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_1' with dtype int32 and shape [16565]\n",
+      "\t [[{{node Placeholder/_1}}]]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16565\n",
+      "\n",
+      "6\n",
+      "lenx 16565\n",
+      "leny 16565\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-09 18:54:00.379056: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_1' with dtype int32 and shape [16565]\n",
+      "\t [[{{node Placeholder/_1}}]]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16565\n",
+      "\n",
+      "7\n",
+      "lenx 16565\n",
+      "leny 16565\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-09 18:54:00.824007: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_1' with dtype int32 and shape [16565]\n",
+      "\t [[{{node Placeholder/_1}}]]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16565\n",
+      "\n",
+      "8\n",
+      "lenx 16565\n",
+      "leny 16565\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-09 18:54:01.341779: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_1' with dtype int32 and shape [16565]\n",
+      "\t [[{{node Placeholder/_1}}]]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16565\n",
+      "\n",
+      "9\n",
+      "lenx 16565\n",
+      "leny 16565\n",
+      "16565\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-09 18:54:01.882700: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_1' with dtype int32 and shape [16565]\n",
+      "\t [[{{node Placeholder/_1}}]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "trueflass_testing = split_x_y_into_chunks(X_test, y_test, 10)\n",
+    "print(len(X_test))\n",
+    "print(len(y_test))\n",
+    "for batch in trueflass_testing:\n",
+    "    print(batch)\n",
+    "    print(\"lenx\", len(trueflass_testing[batch][\"x\"]))    \n",
+    "    print(\"leny\", len(trueflass_testing[batch][\"y\"]))\n",
+    "    asd = tf.data.Dataset.from_tensor_slices((trueflass_testing[batch][\"x\"], trueflass_testing[batch][\"y\"])).batch(len(trueflass_testing[batch][\"x\"]))\n",
+    "    example = list(asd.as_numpy_iterator())\n",
+    "    print(len(example[0][0]))\n",
+    "    #     print(\"x:100\", trueflass_testing[batch][\"x\"][:100])\n",
+    "#     print(\"y:100\", trueflass_testing[batch][\"x\"][:100])\n",
+    "    print()"
    ]
   },
   {
@@ -32453,7 +32523,7 @@
     }
    ],
    "source": [
-    "b"
+    "tf.data.Dataset.from_tensor_slices((X_test, y_test)).batch(len(X_test))"
    ]
   }
  ],
